2007-03-07  Jackson Harper  <jackson@ximian.com>

	* TreeNode.cs: Add the 2.0 collapse method.

2007-03-07  Pedro Martínez Juliá  <pedromj@gmail.com>

	* DataGridViewColumn.cs: Fix HeaderText behaviour (Bug #80746).

2007-03-07  Pedro Martínez Juliá  <pedromj@gmail.com>

	* DataGridView.cs: Change DataSource will clear column and row
	lists. Call Invalidate() to reflect DataSource change.

2007-03-07  Pedro Martínez Juliá  <pedromj@gmail.com>

	* DataGridView.cs: Add rows when DataSource is System.Data.DataView
	and a new row is added to it.

2007-03-07  Pedro Martínez Juliá  <pedromj@gmail.com>

	* DataGridView.cs: Add columns when DataSource is en empty list but
	is a System.Data.DataView (from a System.Data.DataTable).

2007-03-06  Andreia Gaita  <avidigal@novell.com>

	* Label.cs: Implement AutoEllipsis (2.0)

2007-03-06  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Implement 2.0 TopNode setter property.
	- Use a local var instead of the skipped_nodes field for computing
	how many nodes to skip.  Otherwise we won't scroll because the
	valuechanged handler checks if skipped_nodes is equal to the new
	value.
	- Implement 2.0 Sort method.
	- Add useless 2.0 DoubleBuffer property
	- Implement 2.0 LineColors property.  Lets you change the color of
	the lines in the tree. Terribly useful for creating non cohesive
	desktops.
	- Implement 2.0 image key feature.

2007-03-06  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: We can't get the bounds of the nodes before raising
	the AfterSelect event, because that event could change the node's
	bounds (scrolling, font change, etc).

2007-03-06  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* XplatUIWin32.cs: When faking styles don't remove the WS_VISIBLE flag.
	* Form.cs: Don't recreate handle when creating FormWindowManager, just
	  update window styles. In CreateParams us VisibleInternal instead of
	  VIsible to get the actual visible flag set for this form.